ecmascript/parser/tests/test262-error-references/fail/ffcb5a1d89aed63f.js.stderr
error: Expected 2 hex characters
 --> $DIR/tests/test262-parser/fail/ffcb5a1d89aed63f.js:1:2
  |
1 | "\x";
  |  ^^

